Fix hover font size: use fontSize instead of scale, increase line spacing to 3.2em

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -229,7 +229,7 @@ html {
 .heading-container br {
   display: block;
   content: "";
-  margin-bottom: 1.6em;
+  margin-bottom: 3.2em;
 }
 
 /* Default state: First line inverted, second line solid, with 3D perspective */
